Added some more products to the demo shop

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -764,12 +764,16 @@
     <Content Include="Content\samples\manufacturer-samsung.png" />
     <Content Include="Content\samples\manufacturer-trekstor.png" />
     <Content Include="Content\samples\manufacturer-westerndigital.png" />
+    <Content Include="Content\samples\manufacturer_adidas.png" />
     <Content Include="Content\samples\manufacturer_apple.png" />
+    <Content Include="Content\samples\manufacturer_nike.png" />
+    <Content Include="Content\samples\manufacturer_puma.jpg" />
     <Content Include="Content\samples\manufacturer_ray-ban.jpg" />
     <Content Include="Content\samples\manufacturer_festina.png" />
     <Content Include="Content\samples\manufacturer_oakley.png" />
     <Content Include="Content\samples\manufacturer_sony.png" />
     <Content Include="Content\samples\manufacturer_ubisoft.png" />
+    <Content Include="Content\samples\manufacturer_wilson.png" />
     <Content Include="Content\samples\music.png" />
     <Content Include="Content\samples\packshot-net.png" />
     <Content Include="Content\samples\productCustomFlakSunglasses_black_white.jpg" />
@@ -779,17 +783,28 @@
     <Content Include="Content\samples\products_airpods_rose.jpg" />
     <Content Include="Content\samples\products_airpods_turquoise.jpg" />
     <Content Include="Content\samples\products_airpods_white.jpg" />
+    <Content Include="Content\samples\products_nike-strike-football.jpg" />
     <Content Include="Content\samples\product_aceraspiresl1500.png" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-blue.jpg" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-brown.jpg" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-gray.jpg" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-green.jpg" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-red.jpg" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-white.png" />
+    <Content Include="Content\samples\product_adidas-tango-pasadena-ball-yellow.jpg" />
+    <Content Include="Content\samples\product_all-court-basketball.png" />
     <Content Include="Content\samples\product_bestgrillingrecipes.jpg" />
     <Content Include="Content\samples\product_certina_ds_podium_big.png" />
     <Content Include="Content\samples\product_cookingfortwo.jpg" />
     <Content Include="Content\samples\product_CustomFlakSunglasses.jpg" />
     <Content Include="Content\samples\product_dellinspiron23.png" />
+    <Content Include="Content\samples\product_evolution-high-school-game-basketball.jpg" />
     <Content Include="Content\samples\product_giftcart.png" />
     <Content Include="Content\samples\product_ipad_1.jpg" />
     <Content Include="Content\samples\product_ipad_2.jpg" />
     <Content Include="Content\samples\product_iphoneplus_1.jpg" />
     <Content Include="Content\samples\product_iphoneplus_2.jpg" />
+    <Content Include="Content\samples\product_nike-vopower-53-trainer-hs-ball.jpg" />
     <Content Include="Content\samples\product_playstation3dualshock3.png" />
     <Content Include="Content\samples\product_productOriginalWayfarer_1.jpg" />
     <Content Include="Content\samples\product_productOriginalWayfarer_2.jpg" />
@@ -807,6 +822,11 @@
     <Content Include="Content\samples\product_sony_ps4.png" />
     <Content Include="Content\samples\product_sony_ps4_bundle.png" />
     <Content Include="Content\samples\product_sony_ps4_camera.png" />
+    <Content Include="Content\samples\product_torfabrik-offizieller-spielball_blue.png" />
+    <Content Include="Content\samples\product_torfabrik-offizieller-spielball_green.png" />
+    <Content Include="Content\samples\product_torfabrik-offizieller-spielball_red.png" />
+    <Content Include="Content\samples\product_torfabrik-offizieller-spielball_white.png" />
+    <Content Include="Content\samples\product_torfabrik-offizieller-spielball_yellow.png" />
     <Content Include="Content\samples\product_ultimate-apple-pro-hipster-bundle.jpg" />
     <Content Include="Content\samples\product_watchseries2_1.jpg" />
     <Content Include="Content\samples\product_watchseries2_2.jpg" />
