Theme configuration (part  1)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -48,14 +48,25 @@
     <Var name="footer-social-bg" type="Color">#aaa</Var>
     <Var name="footer-social-color" type="Color">#fff</Var>
     
-    <Var name="FooterRadius" type="String">0 0 0 0</Var>
-    
-    <!-- Common Colors -->
-    <Var name="SiteBackground" type="Color">#eaf0f4</Var>
-    <Var name="BodyBackground" type="Color">#fff</Var>
-    <Var name="TextColor" type="Color">#444</Var>
-    <Var name="LinkColor" type="Color">#08c</Var>
-    <Var name="BoxBackground" type="Color">#fff</Var>
+    <!-- Buttons -->
+    <Var name="btn-primary-color" type="Color">#fff</Var>
+    <Var name="btn-primary-bg" type="Color">$brand-primary</Var>
+    <Var name="btn-primary-border" type="Color">$btn-primary-bg</Var>
+    <Var name="btn-secondary-color" type="Color">$gray-dark</Var>
+    <Var name="btn-secondary-bg" type="Color">#fff</Var>
+    <Var name="btn-secondary-border" type="Color">#ccc</Var>
+    <Var name="btn-info-color" type="Color">#fff</Var>
+    <Var name="btn-info-bg" type="Color">$brand-info</Var>
+    <Var name="btn-info-border" type="Color">$btn-info-bg</Var>
+    <Var name="btn-success-color" type="Color">#fff</Var>
+    <Var name="btn-success-bg" type="Color">$brand-success</Var>
+    <Var name="btn-success-border" type="Color">$btn-success-bg</Var>
+    <Var name="btn-warning-color" type="Color">#fff</Var>
+    <Var name="btn-warning-bg" type="Color">$brand-warning</Var>
+    <Var name="btn-warning-border" type="Color">$btn-warning-bg</Var>
+    <Var name="btn-danger-color" type="Color">#fff</Var>
+    <Var name="btn-danger-bg" type="Color">$brand-danger</Var>
+    <Var name="btn-danger-border" type="Color">$btn-danger-bg</Var>
     
     <!-- Common Font -->
     <!-- e.g.: Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic -->
@@ -85,7 +96,12 @@
     <!-- Cart -->
     <Var name="cart-footer-bg" type="Color">$gray-lightest</Var>
     
-
+    
+    
+    
+    
+    
+    
     <Var name="PageTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, Helvetica, 'sans-serif'</Var>
     <Var name="PageTitleFontWeight" type="String">100</Var>
     <Var name="PageTitleColor" type="Color">#3a87ad</Var>
@@ -113,6 +129,44 @@
     <Var name="menubar-bg" type="Color">transparent</Var>
     <Var name="shopbar-bg" type="Color">transparent</Var>
     <Var name="megamenu-bg" type="Color">$gray-lightest</Var>
+
+    <Var name="menubar-color" type="Color">$body-color</Var>            
+    <Var name="shopbar-color" type="Color">$body-color</Var>
+    <Var name="megamenu-color" type="Color">$body-color</Var>
+    <Var name="menubar-inverse-color" type="Color">#fff</Var>
+    <Var name="shopbar-inverse-color" type="Color">#fff</Var>
+    <Var name="megamenu-inverse-color" type="Color">#fff</Var>
+
+    <!-- States -->
+    <Var name="state-success-text" type="Color">#3c763d</Var>
+    <Var name="state-success-bg" type="Color">#dff0d8</Var>
+    <Var name="state-success-border" type="Color">darken($state-success-bg, 5%)</Var>
+
+    <Var name="state-info-text" type="Color">#31708f</Var>
+    <Var name="state-info-bg" type="Color">#d9edf7</Var>
+    <Var name="state-info-border" type="Color">darken($state-info-bg, 5%)</Var>
+
+    <Var name="state-warning-text" type="Color">#8a6d3b</Var>
+    <Var name="state-warning-bg" type="Color">#fcf8e3</Var>
+    <Var name="state-warning-border" type="Color">darken($state-warning-bg, 5%)</Var>
+
+    <Var name="state-danger-text" type="Color">#a94442</Var>
+    <Var name="state-danger-bg" type="Color">#f2dede</Var>
+    <Var name="state-danger-border" type="Color">darken($state-danger-bg, 5%)</Var>
+
+    <!-- Cards -->
+    <Var name="card-border-radius" type="String">$border-radius</Var>
+    <Var name="card-border-color" type="Color">rgba(#000,.125)</Var>
+    <Var name="card-cap-bg" type="Color">$gray-lightest</Var>
+    <Var name="card-bg" type="Color">#fff</Var>
+    <Var name="card-link-hover-color" type="Color">#fff</Var>
+    
+    
+    
+    
+    
+    
+    <!--  -->
     <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
     
     <Var name="ShopBarBackgroundColor" type="Color">#fff</Var>
@@ -207,7 +261,16 @@
     <Var name="DropdownLinkColorHover" type="Color">#fff</Var>
     <Var name="DropdownLinkColorActive" type="Color">#fff</Var>
     <Var name="DropdownLinkBackgroundActive" type="Color">#f9980f</Var>
-    <Var name="DropdownLinkBackgroundHover" type="Color">#f9980f</Var>     
+    <Var name="DropdownLinkBackgroundHover" type="Color">#f9980f</Var>
+
+    <Var name="FooterRadius" type="String">0 0 0 0</Var>
+
+    <!-- Common Colors -->
+    <Var name="SiteBackground" type="Color">#eaf0f4</Var>
+    <Var name="BodyBackground" type="Color">#fff</Var>
+    <Var name="TextColor" type="Color">#444</Var>
+    <Var name="LinkColor" type="Color">#08c</Var>
+    <Var name="BoxBackground" type="Color">#fff</Var>
     
   </Vars>
 
