Theming: fixed missing BS variables

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -28,6 +28,11 @@
     <Var name="brand-success" type="Color">$green</Var>
     <Var name="brand-inverse" type="Color">$gray-dark</Var>
     
+    <!-- Common variables -->
+    <Var name="border-radius" type="String">0.25rem</Var>
+    <Var name="border-radius-lg" type="String">0.3rem</Var>
+    <Var name="border-radius-sm" type="String">0.2rem</Var>
+    
     <!-- Layout -->
     <Var name="boxed" type="Boolean">false</Var>
     <Var name="site-bg" type="Color">$gray-lightest</Var>
