Theme configuration (part 2)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -59,7 +59,7 @@
     <Var name="btn-primary-border" type="Color">$btn-primary-bg</Var>
     <Var name="btn-secondary-color" type="Color">$gray-dark</Var>
     <Var name="btn-secondary-bg" type="Color">#fff</Var>
-    <Var name="btn-secondary-border" type="Color">#ccc</Var>
+    <Var name="btn-secondary-border" type="Color">#ddd</Var>
     <Var name="btn-info-color" type="Color">#fff</Var>
     <Var name="btn-info-bg" type="Color">$brand-info</Var>
     <Var name="btn-info-border" type="Color">$btn-info-bg</Var>
@@ -98,34 +98,6 @@
     <Var name="headings-color" type="String">inherit</Var>
     <Var name="lead-font-weight" type="String">300</Var>
 
-    <!-- Cart -->
-    <Var name="cart-footer-bg" type="Color">$gray-lightest</Var>
-    
-    
-    
-    
-    
-    
-    
-    <Var name="PageTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, Helvetica, 'sans-serif'</Var>
-    <Var name="PageTitleFontWeight" type="String">100</Var>
-    <Var name="PageTitleColor" type="Color">#3a87ad</Var>
-    
-    <!-- Tables-->
-    <Var name="TableBackground" type="Color">transparent</Var>
-    <Var name="TableBackgroundAccent" type="Color">#f9f9f9</Var>
-    <Var name="TableBackgroundHover" type="Color">#f5f5f5</Var>
-    <Var name="TableBorder" type="Color">#ddd</Var>
-  
-    <!-- Buttons -->
-    <Var name="BtnBackground" type="Color">#fff</Var>
-    <Var name="BtnPrimaryBackground" type="Color">#0088cc</Var>
-    <Var name="BtnInfoBackground" type="Color">#5bc0de</Var>
-    <Var name="BtnSuccessBackground" type="Color">#62c462</Var>
-    <Var name="BtnWarningBackground" type="Color">#fbb450</Var>
-    <Var name="BtnDangerBackground" type="Color">#ee5f5b</Var>
-    <Var name="BtnInverseBackground" type="Color">#444</Var>
-    
     <!-- Header -->
     <Var name="header-bg" type="Color">transparent</Var>
     <Var name="inverse-menubar" type="Boolean">false</Var>
@@ -141,20 +113,18 @@
     <Var name="menubar-inverse-color" type="Color">#fff</Var>
     <Var name="shopbar-inverse-color" type="Color">#fff</Var>
     <Var name="megamenu-inverse-color" type="Color">#fff</Var>
-
+    <Var name="mega-menu-height" type="String">1.8</Var>
+    
     <!-- States -->
     <Var name="state-success-text" type="Color">#3c763d</Var>
     <Var name="state-success-bg" type="Color">#dff0d8</Var>
     <Var name="state-success-border" type="Color">darken($state-success-bg, 5%)</Var>
-
     <Var name="state-info-text" type="Color">#31708f</Var>
     <Var name="state-info-bg" type="Color">#d9edf7</Var>
     <Var name="state-info-border" type="Color">darken($state-info-bg, 5%)</Var>
-
     <Var name="state-warning-text" type="Color">#8a6d3b</Var>
     <Var name="state-warning-bg" type="Color">#fcf8e3</Var>
     <Var name="state-warning-border" type="Color">darken($state-warning-bg, 5%)</Var>
-
     <Var name="state-danger-text" type="Color">#a94442</Var>
     <Var name="state-danger-bg" type="Color">#f2dede</Var>
     <Var name="state-danger-border" type="Color">darken($state-danger-bg, 5%)</Var>
@@ -165,122 +135,38 @@
     <Var name="card-cap-bg" type="Color">$gray-lightest</Var>
     <Var name="card-bg" type="Color">#fff</Var>
     <Var name="card-link-hover-color" type="Color">#fff</Var>
-    
-    
-    
-    
-    
-    
-    <!--  -->
-    <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
-    
-    <Var name="ShopBarBackgroundColor" type="Color">#fff</Var>
-    <Var name="ShopBarBorderColor" type="Color">#abc2d1</Var>
-    <Var name="ShopBarTextColor" type="Color">#696969</Var>
-    <Var name="ShopBarIconColor" type="Color">#d2d2d2</Var>
-    
-    <!-- Megamenu -->
-    <Var name="NavbarHeight" type="String">38px</Var>
-    <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
-    
-    <Var name="NavbarText" type="Color">#717171</Var>
-    <Var name="NavbarLinkColor" type="Color">#717171</Var>
-    <Var name="NavbarLinkColorHover" type="Color">#1a1a1a</Var>
-    <Var name="NavbarLinkColorActive" type="Color">#555</Var>
-    
-
-    <Var name="NavbarInverseBackground" type="Color">#222</Var>
-    <Var name="NavbarInverseBackgroundHighlight" type="Color">#666</Var>
-    <Var name="NavbarInverseBorder" type="Color">#555</Var>
-
-    <Var name="NavbarInverseText" type="Color">#dadada</Var>
-    <Var name="NavbarInverseLinkColor" type="Color">#dadada</Var>
-    <Var name="NavbarInverseLinkColorHover" type="Color">#fff</Var>
-    <Var name="NavbarInverseLinkColorActive" type="Color">#fff</Var>
-
-    <!-- Header -->
-    <Var name="HeaderLinkColor" type="Color">#0088cc</Var>
-    <Var name="HeaderHoverColor" type="Color">#005580</Var>
-    <Var name="HeaderIconColor" type="Color">#bbcfdb</Var>
-
-    <Var name="ChooserBorderColor" type="Color">#cfdde6</Var>
-    <Var name="ChooserBackgroundColor" type="Color">transparent</Var>
-    <Var name="ChooserActiveStateColor" type="Color">#cfdde6</Var>
-    <Var name="ChooserFontColor" type="Color">#888</Var>
-
-    <!-- Container -->
-    <Var name="ContainerRadius" type="String">3px</Var>
-    <Var name="ContainerHeaderBackground" type="Color">#e1e9f0</Var>
-    <Var name="ContainerHeaderFontColor" type="Color">#555</Var>
-    <Var name="ContainerHeaderHeight" type="String">17px</Var>
-    <Var name="ContainerBodyBackground" type="Color">#fff</Var>
-    <Var name="ContainerBodyFontColor" type="Color">#555</Var>
-    <Var name="ContainerBodyLinkColor" type="Color">#888</Var>
-    <Var name="ContainerBorder" type="Color">#d6e0e6</Var>
-
-    <!-- Misc -->
-    <Var name="ItemBoxBoxShadowColor" type="Color">#f89406</Var>
-    <Var name="SimpleBoxHeaderColor" type="Color">#ddd</Var>
-    <Var name="CheckoutProgressBackgroundColor" type="Color">#f5f5f5</Var>
-    <Var name="AlternateListItemBackgroundColor" type="Color">#f5f5f5</Var>
-    <Var name="ProductListsPriceColor" type="Color">#468847</Var>
-    <Var name="ProductDetailPriceColor" type="Color">#f89406</Var>
-    
-    <!-- Slider -->
-    <Var name="SliderUseRadialBg" type="Boolean">true</Var>
-    <Var name="SliderBgSlide" type="Select#BgSlideBehaviours">on</Var>
-    <Var name="SliderBackgroundColor" type="Color">#2786ce</Var>
-    <Var name="SliderTitleColor" type="Color">#fff</Var>
-    <Var name="SliderTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, sans-serif</Var>
-    <Var name="SliderTitleFontWeight" type="String">100</Var>
-    <Var name="SliderInfoColor" type="Color">#fff</Var>
-    <Var name="SliderInfoFontFamily" type="String">inherit</Var>
-    <Var name="SliderInfoFontWeight" type="String">inherit</Var>
-
-    <!-- Paginator -->
-    <Var name="PaginationBackground" type="Color">#fff</Var>
-    <Var name="PaginationBorder" type="Color">#ddd</Var> 
-    <Var name="PaginationActiveBackground" type="Color">#f5f5f5</Var>
-
-    <!-- Layout -->
-    <Var name="GridSettings" type="Select#GridSettings">5/14/5</Var>
-    <Var name="GridColumnWidth" type="String">20px</Var> 
-    <Var name="GridGutterWidth" type="String">20px</Var>
-    <Var name="GridColumnWidth1200" type="String">20px</Var>
-    <Var name="GridGutterWidth1200" type="String">30px</Var>   
-
-    <!-- Forms --> 
-    <Var name="InputBackground" type="Color">#fff</Var>
-    <Var name="InputBorder" type="Color">#ccc</Var>
-    <Var name="InputBorderRadius" type="String">2px</Var>
-    <Var name="InputDisabledBackground" type="Color">#eee</Var>
-    <Var name="FormActionsBackground" type="Color">#f5f5f5</Var>
 
     <!-- Dropdowns -->
-    <Var name="DropdownBackground" type="Color">#fff</Var>
-    <Var name="DropdownBorder" type="Color">#bbb</Var>
-    <Var name="DropdownDividerTop" type="Color">#e5e5e5</Var>
-    <Var name="DropdownDividerBottom" type="Color">#fff</Var>
-    
-    <Var name="DropdownLinkColor" type="Color">#333</Var>
-    <Var name="DropdownLinkColorHover" type="Color">#fff</Var>
-    <Var name="DropdownLinkColorActive" type="Color">#fff</Var>
-    <Var name="DropdownLinkBackgroundActive" type="Color">#f9980f</Var>
-    <Var name="DropdownLinkBackgroundHover" type="Color">#f9980f</Var>
+    <Var name="dropdown-bg" type="Color">#fff</Var>
+    <Var name="dropdown-border-color" type="Color">rgba(#000, .075)</Var>
+    <Var name="dropdown-divider-bg" type="Color">$gray-lighter</Var>
+    <Var name="dropdown-box-shadow" type="String">0 .5rem 1rem rgba(#000, .175)</Var>
+    <Var name="dropdown-link-color" type="Color">$gray-dark</Var>
+    <Var name="dropdown-link-hover-color" type="Color">darken($gray-dark, 5%)</Var>
+    <Var name="dropdown-link-hover-bg" type="Color">$gray-lightest</Var>
 
-    <Var name="FooterRadius" type="String">0 0 0 0</Var>
-
-    <!-- Common Colors -->
-    <Var name="SiteBackground" type="Color">#eaf0f4</Var>
-    <Var name="BodyBackground" type="Color">#fff</Var>
-    <Var name="TextColor" type="Color">#444</Var>
-    <Var name="LinkColor" type="Color">#08c</Var>
-    <Var name="BoxBackground" type="Color">#fff</Var>
+    <!-- Tables-->
+    <Var name="table-bg" type="Color">transparent</Var>
+    <Var name="table-bg-accent" type="Color">rgba(#000, .05)</Var>
+    <Var name="table-bg-hover" type="Color">rgba(000, .075)</Var>
+    <Var name="table-bg-active" type="Color">$table-bg-hover</Var>
+    <Var name="table-border-color" type="Color">$gray-lighter</Var>
     
+    <!--  -->
+    <Var name="shopbar-label" type="Select#brand-colors">warning</Var>
+    <Var name="search-button" type="Select#brand-colors">primary</Var>
+    <Var name="nav-tabs-active-link-color" type="Color">$gray</Var>
+    <Var name="product-price-color" type="Color">$body-color</Var>
+    <Var name="login-box-bg" type="Color">#fcfcfc</Var>
+    <Var name="cart-footer-bg" type="Color">$gray-lightest</Var>
+    <Var name="costep-progress-color" type="Color">$brand-warning</Var>
+    <Var name="offcanvas-cart-footer" type="Color">$brand-success</Var>
+    <Var name="art-active-bg-color" type="Color">#fff</Var>
+    <Var name="art-active-border-color" type="Color">rgba(0,0,0, 0.2)</Var>
   </Vars>
 
   <Selects>
-    <Select id="shopbar-labels">
+    <Select id="brand-colors">
       <Option>default</Option>
       <Option>primary</Option>  
       <Option>info</Option>
@@ -288,19 +174,5 @@
       <Option>warning</Option>
       <Option>danger</Option>
     </Select>
-
-    <Select id="GridSettings">
-      <Option>5/14/5</Option>
-      <Option>6/12/6</Option>
-      <Option>7/12/5</Option>
-      <Option>7/11/6</Option>
-    </Select>
-
-    <Select id="BgSlideBehaviours">
-      <Option>off</Option>
-      <Option>on</Option>
-      <Option>opposite</Option>
-    </Select>
   </Selects>
-    
 </Theme>
