--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -113,7 +113,7 @@
     <Var name="menubar-inverse-color" type="Color">#fff</Var>
     <Var name="shopbar-inverse-color" type="Color">#fff</Var>
     <Var name="megamenu-inverse-color" type="Color">#fff</Var>
-    <Var name="mega-menu-height" type="String">1.8</Var>
+    <Var name="mega-menu-height" type="String">1.8</Var> 
     
     <!-- States -->
     <Var name="state-success-text" type="Color">#3c763d</Var>
@@ -122,7 +122,7 @@
     <Var name="state-info-text" type="Color">#31708f</Var>
     <Var name="state-info-bg" type="Color">#d9edf7</Var>
     <Var name="state-info-border" type="Color">darken($state-info-bg, 5%)</Var>
-    <Var name="state-warning-text" type="Color">#8a6d3b</Var>
+    <Var name="state-warning-text" type="Color">#8a6d3b</Var> 
     <Var name="state-warning-bg" type="Color">#fcf8e3</Var>
     <Var name="state-warning-border" type="Color">darken($state-warning-bg, 5%)</Var>
     <Var name="state-danger-text" type="Color">#a94442</Var>
@@ -148,7 +148,7 @@
     <!-- Tables-->
     <Var name="table-bg" type="Color">transparent</Var>
     <Var name="table-bg-accent" type="Color">rgba(#000, .05)</Var>
-    <Var name="table-bg-hover" type="Color">rgba(000, .075)</Var>
+    <Var name="table-bg-hover" type="Color">rgba(#000, .075)</Var>
     <Var name="table-bg-active" type="Color">$table-bg-hover</Var>
     <Var name="table-border-color" type="Color">$gray-lighter</Var>
     
